Partially implement set namespace/volume access.
