# pkg/router/access.go
@@ -42,12 +42,44 @@ func (ah *accessHandlers) setUserAccessesHandler(ctx *gin.Context) {
 	ctx.Status(http.StatusOK)
 }
 
+func (ah *accessHandlers) setNamespaceAccessHandler(ctx *gin.Context) {
+	userID := httputil.MustGetUserID(ctx.Request.Context())
+	var req model.SetUserAccessRequest
+	if err := ctx.ShouldBindWith(&req, binding.JSON); err != nil {
+		ctx.AbortWithStatusJSON(ah.tv.BadRequest(ctx, err))
+		return
+	}
+
+	if err := ah.acts.SetNamespaceAccess(ctx, userID, ctx.Param("label"), req.UserName, req.Access); err != nil {
+		ctx.AbortWithStatusJSON(ah.tv.HandleError(err))
+		return
+	}
+
+	ctx.Status(http.StatusOK)
+}
+
+func (ah *accessHandlers) setVolumeAccessHandler(ctx *gin.Context) {
+	userID := httputil.MustGetUserID(ctx.Request.Context())
+	var req model.SetUserAccessRequest
+	if err := ctx.ShouldBindWith(&req, binding.JSON); err != nil {
+		ctx.AbortWithStatusJSON(ah.tv.BadRequest(ctx, err))
+		return
+	}
+
+	if err := ah.acts.SetVolumeAccess(ctx, userID, ctx.Param("label"), req.UserName, req.Access); err != nil {
+		ctx.AbortWithStatusJSON(ah.tv.HandleError(err))
+		return
+	}
+
+	ctx.Status(http.StatusOK)
+}
+
 func (r *Router) SetupAccessRoutes(acts server.AccessActions) {
 	handlers := &accessHandlers{acts: acts, tv: r.tv}
 
 	// swagger:operation GET /access GetResourcesAccesses
 	//
-	// Returns user accesses to resources
+	// Returns user accesses to resources.
 	//
 	// ---
 	// parameters:
@@ -80,4 +112,50 @@ func (r *Router) SetupAccessRoutes(acts server.AccessActions) {
 	//	default:
 	//	  description: error
 	r.engine.PUT("/admin/accesses", handlers.setUserAccessesHandler)
+
+	// swagger:operation PUT /namespaces/{label}/access SetNamespaceAccess
+	//
+	// Grant namespace permission to user.
+	//
+	// ---
+	// parameters:
+	// - $ref: '#/parameters/UserIDHeader'
+	// - $ref: '#/parameters/UserRoleHeader'
+	// - $ref: '#/parameters/SubstitutedUserID'
+	// - name: body
+	//   in: body
+	//   schema:
+	//     $ref: "#/definitions/SetResourceAccessRequest"
+	// - name: label
+	//   in: path
+	//   description: Namespace label
+	// responses:
+	//	'200':
+	//	  description: access set
+	//	default:
+	//	  description: error
+	r.engine.PUT("/namespaces/:label/access", handlers.setNamespaceAccessHandler)
+
+	// swagger:operation PUT /volumes/{label}/access SetVolumeAccess
+	//
+	// Grant volume permission to user.
+	//
+	// ---
+	// parameters:
+	// - $ref: '#/parameters/UserIDHeader'
+	// - $ref: '#/parameters/UserRoleHeader'
+	// - $ref: '#/parameters/SubstitutedUserID'
+	// - name: body
+	//   in: body
+	//   schema:
+	//     $ref: "#/definitions/SetResourceAccessRequest"
+	// - name: label
+	//   in: path
+	//   description: Volume label
+	// responses:
+	//	'200':
+	//	  description: access set
+	//	default:
+	//	  description: error
+	r.engine.PUT("/volumes/:label/access", handlers.setVolumeAccessHandler)
 }
